feat(apply): 新增应用申请模块及审核功能
- 新增应用申请相关实体类、DTO、VO、Query类及Mapper接口
- 新增应用申请控制层，实现应用申请的删除、查询、分页和审核功能
- 实现应用申请审核逻辑，支持审批通过和驳回操作
- 审核通过后自动创建应用，并复制关联头像文件
- 添加复制文件DTO及文件转换工具，优化文件相关代码结构
- 调整文件类型枚举值顺序，新增其他类型枚举
- 重构文件持久化逻辑，引入文件转换组件替代手动转换代码
- 代码格式和注释优化，提升代码可读性和维护性